fixed logo not showing well

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -31,16 +31,19 @@
   flex-shrink: 0;
   cursor: pointer;
   overflow: visible;
+  /* border: 1px solid yellow; */
+  width: 30%;
 }
 
 .navLogo img {
-  width: 68px;
-  height: 68px;
+  width: 50px;
+  height: 50px;
   object-fit: contain;
   transform: scale(1.5);
   transform-origin: center;
   filter: brightness(0) invert(1);
   transition: transform 0.3s ease;
+  flex: 0.4;
 }
 
 .navLogo:hover img {
@@ -48,8 +51,13 @@
 }
 
 .navLogoText {
+  flex: 0.6;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  /* border: 1px solid red; */
   font-family: var(--font-heading);
-  font-size: 1.05rem;
+  font-size: 0.95rem;
   font-weight: 900;
   letter-spacing: 0.04em;
   line-height: 1.15;
